--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.2",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.1",
     "node-fetch": "^3.3.2"
   }
 }
